<resources>
    <string name="app_name">Women Safety App</string>
    <string name="angel">Angel</string>
    <string name="be_brave">Be Brave</string>
    <string name="sign_in">SIGN IN</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_hint">We just need your registered Email ID to send you password reset instructions.</string>
    <string name="send_pass">RESET PASSWORD</string>
    <string name="back">BACK</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email here…</string>
    <string name="password">Password</string>
    <string name="register_here">Register</string>
    <string name="create_new_account">Don\'t have an account? Sign up</string>
    <string name="signup">Sign up</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="age">Age</string>
    <string name="dashboard">Dashboard</string>
    <string name="alert">Alert</string>
    <string name="guardians">Guardians</string>
    <string name="emergency_centers">Emergency Centers</string>
    <string name="call_police">Call Police</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="guardian_1">Guardian 1</string>
    <string name="guardian_2">Guardian 2</string>
    <string name="server_url">https://women-safety-application.herokuapp.com/</string>
    <string name="title_activity_emergency_centers">EmergencyCentersActivity</string>
    <string name="centers">Centers</string>
</resources>